force-app/main/default/objects/Product_Specification__c/Product_Specification__c.object-meta.xml
<CustomObject>
    <label>Product Specification</label>
    <nameField>
        <label>Product Specification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>