force-app/main/default/objects/Product_Specification__c/fields/Added_Sugars__c.field-meta.xml
<CustomField>
    <fullName>Added_Sugars__c</fullName>
    <label>Added Sugars (g)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>