force-app/main/default/objects/Product_Specification__c/fields/Added_Sugars_Percent__c.field-meta.xml
<CustomField>
    <fullName>Added_Sugars_Percent__c</fullName>
    <label>Added Sugars %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>