force-app/main/default/objects/Product_Specification__c/fields/Amount_Per_Serving_Iron_mg__c.field-meta.xml
<CustomField>
    <fullName>Amount_Per_Serving_Iron_mg__c</fullName>
    <label>Iron (mg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>