force-app/main/default/objects/Product_Specification__c/fields/Calcium_mg__c.field-meta.xml
<CustomField>
    <fullName>Calcium_mg__c</fullName>
    <label>Calcium (mg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>