force-app/main/default/objects/Product_Specification__c/fields/Calcium_percent__c.field-meta.xml
<CustomField>
    <fullName>Calcium_percent__c</fullName>
    <label>Calcium (%)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>