force-app/main/default/objects/Product_Specification__c/fields/Calories__c.field-meta.xml
<CustomField>
    <fullName>Calories__c</fullName>
    <label>Calories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>