force-app/main/default/objects/Product_Specification__c/fields/Calories_from_Fat__c.field-meta.xml
<CustomField>
    <fullName>Calories_from_Fat__c</fullName>
    <label>Calories from Fat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>