force-app/main/default/objects/Product_Specification__c/fields/Case_Size__c.field-meta.xml
<CustomField>
    <fullName>Case_Size__c</fullName>
    <label>Pack Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>