force-app/main/default/objects/Product_Specification__c/fields/Cases_Pallet__c.field-meta.xml
<CustomField>
    <fullName>Cases_Pallet__c</fullName>
    <label>Cases/Pallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>