force-app/main/default/objects/Product_Specification__c/fields/Cholesterol_mg__c.field-meta.xml
<CustomField>
    <fullName>Cholesterol_mg__c</fullName>
    <label>Cholesterol (mg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>