force-app/main/default/objects/Product_Specification__c/fields/Cholesterol_Percent__c.field-meta.xml
<CustomField>
    <fullName>Cholesterol_Percent__c</fullName>
    <label>Cholesterol (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>