force-app/main/default/objects/Product_Specification__c/fields/CN__c.field-meta.xml
<CustomField>
    <fullName>CN__c</fullName>
    <label>CN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>