force-app/main/default/objects/Product_Specification__c/fields/Dietary_Fiber_g__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Fiber_g__c</fullName>
    <label>Dietary Fiber (g)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>