force-app/main/default/objects/Product_Specification__c/fields/Dietary_Fiber_Percent__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Fiber_Percent__c</fullName>
    <label>Dietary Fiber (%)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>