force-app/main/default/objects/Product_Specification__c/fields/English_Ingredient_Statement__c.field-meta.xml
<CustomField>
    <fullName>English_Ingredient_Statement__c</fullName>
    <label>English Ingredient Statement</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>