force-app/main/default/objects/Product_Specification__c/fields/Frozen_or_Refridgerated__c.field-meta.xml
<CustomField>
    <fullName>Frozen_or_Refridgerated__c</fullName>
    <label>Frozen or Refrigerated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Refrigerated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>