force-app/main/default/objects/Product_Specification__c/fields/Gross_Pounds_Per_Pallet__c.field-meta.xml
<CustomField>
    <fullName>Gross_Pounds_Per_Pallet__c</fullName>
    <formula>Gross_Weight_Case_Lbs__c * Cases_Pallet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Pounds Per Pallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>