force-app/main/default/objects/Product_Specification__c/fields/Gross_Weight_Case_Lbs__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_Case_Lbs__c</fullName>
    <label>Gross Weight/Case (Lbs)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>