force-app/main/default/objects/Product_Specification__c/fields/GTIN__c.field-meta.xml
<CustomField>
    <fullName>GTIN__c</fullName>
    <formula>Product__r.GTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GTIN</label>
    <type>Text</type>
</CustomField>