force-app/main/default/objects/Product_Specification__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Case Height</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>