force-app/main/default/objects/Product_Specification__c/fields/Legacy_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product_Code__c</fullName>
    <label>Legacy Product Code</label>
    <type>TextArea</type>
</CustomField>