force-app/main/default/objects/Product_Specification__c/fields/Legacy_System__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System__c</fullName>
    <formula>Product__r.LEGACY_SYSTEM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy System</label>
    <type>Text</type>
</CustomField>