force-app/main/default/objects/Product_Specification__c/fields/Marketing_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Phrase__c</fullName>
    <label>Marketing Phrase</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>