force-app/main/default/objects/Product_Specification__c/fields/Mastercase_Cube_cubic_ft__c.field-meta.xml
<CustomField>
    <fullName>Mastercase_Cube_cubic_ft__c</fullName>
    <formula>Length__c * Width__c * Height__c / 1728</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mastercase Cube (cubic ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>