force-app/main/default/objects/Product_Specification__c/fields/Material_Pack_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Pack_Type__c</fullName>
    <label>Material Pack Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individually Wrapped</fullName>
            </value>
            <value>
                <fullName>Penny Stacked</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Tote</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Bib</fullName>
            </value>
            <value>
                <fullName>Pail</fullName>
            </value>
            <value>
                <fullName>Pillow Pak</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>