force-app/main/default/objects/Product_Specification__c/fields/Net_Weight_Case_Lbs__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_Case_Lbs__c</fullName>
    <description>Specifies the unit weight per case for the product</description>
    <formula>Product__r.NET_CASE_WT_LBS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Weight/Case (Lbs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>