force-app/main/default/objects/Product_Specification__c/fields/Nutrition_Facts_Panel_Selection__c.field-meta.xml
<CustomField>
    <fullName>Nutrition_Facts_Panel_Selection__c</fullName>
    <label>Nutrition Facts Panel Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NFP 2016</fullName>
            </value>
            <value>
                <fullName>NFP 2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>