force-app/main/default/objects/Product_Specification__c/fields/Pallet_Hi__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Hi__c</fullName>
    <label>Pallet Hi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>