force-app/main/default/objects/Product_Specification__c/fields/Pallet_Tie__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Tie__c</fullName>
    <label>Pallet Tie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>