force-app/main/default/objects/Product_Specification__c/fields/Potassium__c.field-meta.xml
<CustomField>
    <fullName>Potassium__c</fullName>
    <label>Potassium (mg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>