force-app/main/default/objects/Product_Specification__c/fields/Protein_g__c.field-meta.xml
<CustomField>
    <fullName>Protein_g__c</fullName>
    <label>Protein (g)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>