force-app/main/default/objects/Product_Specification__c/fields/Religious_Designation__c.field-meta.xml
<CustomField>
    <fullName>Religious_Designation__c</fullName>
    <label>Religious Designation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>KosherCircleK</fullName>
            </value>
            <value>
                <fullName>KosherCircleU</fullName>
            </value>
            <value>
                <fullName>KosherD</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>