force-app/main/default/objects/Product_Specification__c/fields/SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Number__c</fullName>
    <formula>Product__r.SKU_NO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Number</label>
    <type>Text</type>
</CustomField>