force-app/main/default/objects/Product_Specification__c/fields/Saturated_Fat_Percent__c.field-meta.xml
<CustomField>
    <fullName>Saturated_Fat_Percent__c</fullName>
    <label>Saturated Fat (%)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>