force-app/main/default/objects/Product_Specification__c/fields/Serving_Size_g__c.field-meta.xml
<CustomField>
    <fullName>Serving_Size_g__c</fullName>
    <label>Serving Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>