force-app/main/default/objects/Product_Specification__c/fields/Serving_Size_UOM__c.field-meta.xml
<CustomField>
    <fullName>Serving_Size_UOM__c</fullName>
    <label>Serving Size UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>OZ</fullName>
            </value>
            <value>
                <fullName>TBSP</fullName>
            </value>
            <value>
                <fullName>CUP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>