force-app/main/default/objects/Product_Specification__c/fields/Servings_Per_Case__c.field-meta.xml
<CustomField>
    <fullName>Servings_Per_Case__c</fullName>
    <label>Servings Per Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>