force-app/main/default/objects/Product_Specification__c/fields/Shelf_Life__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life__c</fullName>
    <label>Shelf Life (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>