force-app/main/default/objects/Product_Specification__c/fields/Sodium_mg__c.field-meta.xml
<CustomField>
    <fullName>Sodium_mg__c</fullName>
    <label>Sodium (mg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>