force-app/main/default/objects/Product_Specification__c/fields/Sodium_Percent__c.field-meta.xml
<CustomField>
    <fullName>Sodium_Percent__c</fullName>
    <label>Sodium (%)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>