force-app/main/default/objects/Product_Specification__c/fields/Total_Carbs_g__c.field-meta.xml
<CustomField>
    <fullName>Total_Carbs_g__c</fullName>
    <label>Total Carbs (g)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>