force-app/main/default/objects/Product_Specification__c/fields/Total_Fat_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Fat_Percent__c</fullName>
    <label>Total Fat (%)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>