force-app/main/default/objects/Product_Specification__c/fields/Vitamin_A_IU__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_A_IU__c</fullName>
    <label>Vitamin A (IU)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>