force-app/main/default/objects/Product_Specification__c/fields/Vitamin_A_Percent__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_A_Percent__c</fullName>
    <label>Vitamin A (%)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>