force-app/main/default/objects/Product_Specification__c/fields/Vitamin_C_mg__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_C_mg__c</fullName>
    <label>Vitamin C (mg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>