force-app/main/default/objects/Product_Specification__c/fields/Vitamin_C_Percent__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_C_Percent__c</fullName>
    <label>Vitamin C (%)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>