force-app/main/default/objects/Product_Specification__c/fields/Vitamin_D_mcg__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_D_mcg__c</fullName>
    <label>Vitamin D (mcg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>