force-app/main/default/objects/Product_Specification__c/fields/Vitamin_D_Percent__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_D_Percent__c</fullName>
    <label>Vitamin D (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>