force-app/main/default/objects/Product_Specification__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Case Width</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>